--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,6 @@
 // .babelrc
 
 {
-  "presets": ["env", "react"],
+  "presets": ["@babel/env", "@babel/react"],
   "plugins": ["transform-class-properties"]
 }
