--- a/.babelrc
+++ b/.babelrc
@@ -2,5 +2,5 @@
 
 {
   "presets": ["@babel/env", "@babel/react"],
-  "plugins": ["transform-class-properties"]
+  "plugins": ["@babel/plugin-transform-runtime"]
 }
