--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/ximnoise/myFlix-client#readme",
   "dependencies": {
+    "@parcel/transformer-sass": "^2.0.0-alpha.3",
     "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
     "parcel": "^2.0.0-beta.2",
